# formal-9sem-hw

./: README.md
hw2/: CMakeLists.txt  README.md  debug.cpp  main.cpp  regex_lib.hpp  test_data.json  tests.cpp
hw3/: clone_file.py  my_wc.l  my_wc_2.l  time_bench.sh
hw4/: CYK.py  CYK_graph_naive.py  bench.py  benchmark_full_results_0.1.json  benchmark_full_results_0.2.json  benchmark_full_results_0.3.json  benchmark_results.json  plot_results.py
